# Telco-RCA

./: .dockerignore  .gitignore  Dockerfile  README.md  THEORY.md  check_hf.sh  environment.py  graders.py  index.html  inference.py  main.py  models.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_baseline.sh  tailwind.config.js  test_environment.py  vite.config.js
app/: __init__.py  environment.py  graders.py  main.py  models.py
app/static/: app.js  index.html  styles.css
artifacts/: baseline_logs.txt  baseline_report.txt  baseline_report_example.txt  baseline_snapshot.txt  docker_smoke.txt  hf_live_check.txt  openenv_validate.txt  pytest.txt  reproducibility_test.txt
server/: app.py
src/: App.jsx  index.css  main.jsx
src/components/: ExplainabilityPanel.jsx  TaskSelector.jsx
src/components/AgentPanel/: AgentPanel.jsx
src/components/AlarmPanel/: AlarmPanel.jsx
src/components/Graph/: CategoryNode.jsx  GraphPanel.jsx  NodeDetailCard.jsx  TelecomNode.jsx
src/components/Metrics/: MetricsPanel.jsx
src/components/TrajectoryPanel/: TrajectoryPanel.jsx
src/hooks/: useSimulation.js
src/pages/: Dashboard.jsx  Landing.jsx
src/services/: api.js  socket.js
src/utils/: agent.js  categorizedGraph.js  constants.js  explainability.js  formatters.js  graph.js
tests/: test_environment.py
